--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@laura/table",
-  "version": "1.0.0",
+  "name": "@etoiline/table",
+  "version": "1.0.1",
   "description": "Made with create-react-library",
   "author": "Etoiline",
   "license": "MIT",
@@ -44,7 +44,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.4",
     "react": "^18.2.0",
-    "react-dom": "^16.13.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^3.4.1"
   },
   "files": [
